<resources>
    <string name="app_name">ClubNauticBadalona</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="club">Club</string>
    <string name="seccions">Seccions</string>
    <string name="installetions">Instal.lacions</string>
    <string name="advantages">Avantatges Socis</string>
    <string name="current_events">Actualitat</string>
    <string name="membership">Fes-te Soci</string>
    <string name="contact">Contactar i Horaris</string>
    <string name="topAppMenu">Menu</string>
</resources>