<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/club"
            android:title="@string/club"
            android:checkable="true" />
        <item
            android:id="@+id/sections"
            android:title="@string/seccions"
            android:checkable="true" />
        <item
            android:id="@+id/installetions"
            android:title="@string/installetions"
            android:checkable="true" />
        <item
            android:id="@+id/advanteges"
            android:title="@string/advantages"
            android:checkable="true" />
        <item
            android:id="@+id/current_events"
            android:title="@string/current_events"
            android:checkable="true" />
        <item
            android:id="@+id/membership"
            android:title="@string/membership"
            android:checkable="true" />
        <item
            android:id="@+id/contact_timetable"
            android:title="@string/contact"
            android:checkable="true" />
    </group>

</menu>